<resources>
    <string name="app_name">Vaultio</string>
    <string name="logo_description">Website logo</string>
    <string name="profile_image">profile image\n</string>
    <string name="edit_button">edit button\n</string>
    <string name="name">name</string>
    <string name="email">email\n</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="save">save</string>
    <string name="website">Website</string>
    <string name="email_example_com">email@example.com</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="email_locked_message">Email cannot be changed for security reasons</string>
    <string name="autofill_service_description">autofill service description</string>
</resources>