<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/beige">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/logo_description" />


        <TextView
            android:id="@+id/textViewWebsite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/navy"
            android:textSize="16sp"
            android:text="@string/website"
            app:layout_constraintStart_toEndOf="@id/imageViewLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnEdit"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" />


        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/navy"
            android:text="@string/email_example_com"
            app:layout_constraintStart_toEndOf="@id/imageViewLogo"
            app:layout_constraintTop_toBottomOf="@id/textViewWebsite"
            app:layout_constraintEnd_toStartOf="@id/btnEdit"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp" />


        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit"
            android:src="@drawable/baseline_edit_note_24"
            app:layout_constraintBottom_toBottomOf="@id/textViewEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewEmail"
            app:layout_constraintVertical_bias="0.19" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:src="@drawable/baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="@id/textViewWebsite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewWebsite" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>